--- a/WeatherApp.Frontend/Components/App.razor
+++ b/WeatherApp.Frontend/Components/App.razor
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="WeatherApp.Frontend.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
     <HeadOutlet />
 </head>
