--- a/WeatherApp.Frontend/Components/Layout/NavMenu.razor
+++ b/WeatherApp.Frontend/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
-﻿<NavLink class="nav-link" href="forecast">
-    <span class="oi oi-calendar"></span> Pronóstico Semanal
+﻿<NavLink class="nav-link text-white" href="forecast">
+    <i class="bi bi-calendar-week me-2"></i> Pronóstico Semanal
 </NavLink>
-<NavLink class="nav-link" href="current">
-    <span class="oi oi-sun"></span> Clima Actual
+<NavLink class="nav-link text-white" href="current">
+    <i class="bi bi-sun me-2"></i> Clima Actual
 </NavLink>
